--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,6 +28,6 @@ jobs:
         docker build -t angelvarela2412/0.0.1 .
     - name: Push docker image
       run: |
-        docker push angelvarela2412/0.0.1 .
+        docker push angelvarela2412/0.0.1
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
