--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,9 +25,10 @@ jobs:
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - name: build docker image
       run: |
-        docker build -t angelvarela2412/0.0.1 .
+        docker build -t angelvarela2412/graphql:0.0.1 .
     - name: Push docker image
       run: |
-        docker push angelvarela2412/0.0.1
+        docker push angelvarela2412/graphql:0.0.1
+        docker push angelvarela2412/graphql:latest
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
