--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,18 +17,31 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
+    - name: Git Semantic Version
+      uses: PaulHatch/semantic-version@v4.0.3
+      with:
+        major_pattern: "major:"
+        minor_pattern: "feat:"
+        format: "${major}.${minor}.${patch}-prerelease${increment}"
+      id: version
+      
     - name: auth
       env:
         DOCKER_USER: ${{secrets.DOCKER_USER}}
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+        NEW_VERSION: ${{steps.version.outputs.version}}
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - name: build docker image
+      env:
+          NEW_VERSION: ${{steps.version.outputs.version}}
       run: |
-        docker build -t angelvarela2412/graphql:0.0.1 .
+        docker build -t angelvarela2412/graphql:$NEW_VERSION .
     - name: Push docker image
+      env:
+          NEW_VERSION: ${{steps.version.outputs.version}}
       run: |
-        docker push angelvarela2412/graphql:0.0.1
-        docker push angelvarela2412/graphql:latest
-    # - name: Build the Docker image
-    #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        docker push angelvarela2412/graphql:$NEW_VERSION
+        # docker push angelvarela2412/graphql:latest
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
